Update font loading to block to avoid font jumping

--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Inter var";
   font-weight: 100 900;
-  font-display: swap;
+  font-display: block;
   font-style: normal;
   font-named-instance: "Regular";
   src: url("../fonts/Inter/Inter-roman.var.woff2") format("woff2");
@@ -9,7 +9,7 @@
 @font-face {
   font-family: "Inter var";
   font-weight: 100 900;
-  font-display: swap;
+  font-display: block;
   font-style: italic;
   font-named-instance: "Italic";
   src: url("../fonts/Inter/Inter-italic.var.woff2") format("woff2");
@@ -18,7 +18,7 @@
 @font-face {
   font-family: "Fira Code var";
   font-weight: 100 900;
-  font-display: swap;
+  font-display: block;
   font-style: normal;
   font-named-instance: "Regular";
   src: url("../fonts/FiraCode/FiraCode-VF.woff2") format("woff2");
